--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,7 +13,7 @@
   </head>
   <body>
     <!-- sample Navbar: https://www.w3schools.com/bootstrap4/bootstrap_navbar.asp -->
-    <nav class="navbar navbar-expand-md navbar-dark">
+    <nav class="navbar navbar-expand-md navbar-dark px-4 py-3">
         <!-- Brand -->
         <a class="navbar-brand" href="/">Hire Me!</a>
 
