fixed path error

--- a/views/employers/index.hbs
+++ b/views/employers/index.hbs
@@ -1,5 +1,5 @@
 <h1>Employer List</h1>
-<p class="lead"><a href="employers/create">Add New Employer</a></p>
+<p class="lead"><a href="/employers/create">Add New Employer</a></p>
 <ul>
     {{#each employers}}
         <li>{{this.name}}</li>
