--- a/views/employers/edit.hbs
+++ b/views/employers/edit.hbs
@@ -2,27 +2,27 @@
 <form method="post">
     <fieldset>
         <label for="name">Name: *</label>
-        <input type="text" name="name" id="name" required />
+        <input type="text" name="name" id="name" required value="{{employer.name}}" />
     </fieldset>
     <fieldset>
         <label for="city">City: *</label>
         <select name="city" id="city" required>
             {{#each cities}}
-                <option>{{this.name}}</option>
+                {{selectOption this.name ../employer.city}}
             {{/each}}
         </select>
     </fieldset>
     <fieldset>
         <label for="comments">Comments:</label>
-        <textarea name="comments" id="comments"></textarea>
+        <textarea name="comments" id="comments">{{employer.comments}}</textarea>
     </fieldset>
     <fieldset>
         <label for="contactEmail">Contact Email:</label>
-        <input type="email" name="contactEmail" id="contactEmail" />
+        <input type="email" name="contactEmail" id="contactEmail" value="{{employer.contactEmail}}" />
     </fieldset>
     <fieldset>
         <label for="employees"># of Employees:</label>
-        <input type="number" min="1" name="employees" id="employees" />
+        <input type="number" min="1" name="employees" id="employees" value="{{employer.employees}}" />
     </fieldset>
     <button class="btn btn-secondary offset-1">Save</button>
 </form>
