--- a/views/employers/index.hbs
+++ b/views/employers/index.hbs
@@ -1,7 +1,35 @@
 <h1>Employer List</h1>
-<p class="lead"><a href="/employers/create">Add New Employer</a></p>
-<ul>
-    {{#each employers}}
-        <li>{{this.name}}</li>
-    {{/each}}
-</ul>
+<a href="/employers/create">Add a New Employer</a>
+<table class="table table-striped table-hover">
+    <thead>
+        <th>Name</th>
+        <th>City</th>
+        <th>Email</th>
+        <th># of Employees</th>
+        <th class="text-center">Actions</th>
+    </thead>
+    <tbody>
+        {{#each employers}}
+            <tr>
+                <td>{{this.name}}</td>
+                <td>{{this.city}}</td>
+                <td>
+                    {{#if this.contactEmail}}
+                        <a href="mailto:{{this.contactEmail}}">
+                            {{this.contactEmail}}
+                        </a>   
+                    {{/if}}             
+                </td>
+                <td>{{this.employees}}</td>
+                <td class="text-center">
+                    <a href="/employers/edit/{{this._id}}" title="Edit">
+                        <i class="fa-solid fa-pen-to-square"></i>
+                    </a>
+                    <a href="/employers/delete/{{this._id}}" title="Delete" onclick="return confirmDelete();">
+                        <i class="fa-solid fa-trash-can"></i>
+                    </a>                
+                </td>
+            </tr>
+        {{/each}}
+    </tbody>
+</table>
